--- a/courses/templates/courses/manage/module/content_list.html
+++ b/courses/templates/courses/manage/module/content_list.html
@@ -54,7 +54,7 @@
             <li><a href="{% url "module_content_create" module.id "image" %}">Image</a></li>
             <li><a href="{% url "module_content_create" module.id "video" %}">Video</a></li>
             <li><a href="{% url "module_content_create" module.id "file" %}">File</a></li>
-			<li><a href="{% url "teacher_quiz_change_list" %}">File</a></li>
+			<li><a href="{% url "app_add_question" module.id %}">Add Questions</a></li>
         </ul>
     </div>
 {% endwith %}
