--- a/students/templates/base.html
+++ b/students/templates/base.html
@@ -24,11 +24,15 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    {% block scripts %}
+    {% endblock %}
+
     <script>
         $(document).ready(function() {
             {% block domready %}
             {% endblock %}
         });
     </script>
+
 </body>
 </html>
