--- a/students/templates/students/student/taken_quiz_list.html
+++ b/students/templates/students/student/taken_quiz_list.html
@@ -5,34 +5,53 @@
 {% endblock %}
 
 {% block content %}
+
 <div class="container">
-    <h2>{% trans 'Taken quiz' %}</h2>
+    <div class="row">
+        <div class="col-12">
+            <div class="card border-info">
+                <div class="card-header text-white bg-info ">
+                    <strong>{% trans 'Taken quiz' %}</strong>
+                </div>
+                <div class="card-body">
+                   
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>{% trans 'Quiz' %}</th>
+                                <!-- <th>{% trans 'Tag' %}</th> -->
+                                <th>{% trans 'Score' %}</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for taken_quiz in taken_quizzes %}
+                                <tr>
+                                    <td>{{ taken_quiz.quiz.name }}</td>
+                                    <!-- <td>{{ taken_quiz.quiz.get_html_badge }}</td> -->
+                                    <td>{{ taken_quiz.score }} %</td>
+                                </tr>
+                            {% empty %}
+                                <tr>
+                                    <td colspan="3">{% trans 'No quiz completed yet.' %}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+              
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <!-- <h2>{% trans 'Taken quiz' %}</h2> -->
     <div class="quizzes">
-        {% include 'students/student/_title.html' with active='taken' %}
+        <!-- { include 'students/student/_title.html' with active='taken' } -->
         <div class="quiz">
-            <table>
-                <thead>
-                    <tr>
-                        <th>{% trans 'Quiz' %}</th>
-                        <th>{% trans 'Tag' %}</th>
-                        <th>{% trans 'Score' %}</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for taken_quiz in taken_quizzes %}
-                        <tr>
-                            <td>{{ taken_quiz.quiz.name }}</td>
-                            <td>{{ taken_quiz.quiz.get_html_badge }}</td>
-                            <td>{{ taken_quiz.score }} %</td>
-                        </tr>
-                    {% empty %}
-                        <tr>
-                            <td colspan="3">{% trans 'No quiz completed yet.' %}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+            
         </div>
     </div>
 </div>
